modifying standalone install to set environment variables all from the service file as in the updated developer guide